--- a/home.html
+++ b/home.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
+    <!-------------------------------------HEADER------------------------------->
     <header>
         <div>
             <div class="logo">EYL</div>
             <div class="left">
                 <ul>
-                    <li><a href="">HOME</a></li>
+                    <li><a href="" class="home-active">HOME</a></li>
                     <li>
                         <a href="">SERVICES</a>
-                        <ul class="services">
+                        <!--<ul class="services">
                             <li><a href="">BRITISH ENGLISH</a></li>
                             <li><a href="">AMERICAN ENGLISH</a></li>
                             <li><a href="">INFORMATICS</a></li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li><a href="">CONTACTS</a></li>
                     <li><a href="">ABOUT US</a></li>
@@ -28,5 +29,16 @@
             </div>
         </div>
     </header>
+
+    <!-------------------------------------MAIN------------------------------->
+    <main>
+        <div class="services-stage">
+            
+        </div>
+    </main>
+    <!-------------------------------------Footer------------------------------->
+    <footer>
+
+    </footer>
 </body>
 </html>
